--- a/src/app/restaurent/pages/register/register.component.html
+++ b/src/app/restaurent/pages/register/register.component.html
@@ -38,7 +38,7 @@
                   <label class="pure-material-textfield-outlined w-100">
                     <input placeholder=" " name="lname" type="text" [(ngModel)]="signUpBody.data.customerData.lName" required>
                     <span>Last Name</span>
-                    <p class="text-danger mb-0" *ngIf="!signUpBody.data.customerData.lName">{{fnameError}}</p>
+                    <p class="text-danger mb-0" *ngIf="!signUpBody.data.customerData.lName">{{lnameError}}</p>
                   </label>
                 </div>
               </div>
