--- a/src/app/restaurent/pages/checkout/checkout.component.scss
+++ b/src/app/restaurent/pages/checkout/checkout.component.scss
@@ -1848,3 +1848,16 @@ overflow: auto;
 //     }
 //   }
 // }
+
+
+.errorr {
+  position: relative;
+ // border-color: red !important;
+  animation: shake .1s linear;
+  animation-iteration-count: 3;
+}
+
+@keyframes shake {
+  0% { left: -5px; }
+  100% { right: -5px; }
+}
