--- a/src/app/restaurent/pages/dish-items/dish-items.component.scss
+++ b/src/app/restaurent/pages/dish-items/dish-items.component.scss
@@ -394,6 +394,7 @@
 @media (max-width:575px){
   .dummsection .col-sm-12{
     min-height: 70px !important;
+    display: none;
   }
    
 }
@@ -416,5 +417,5 @@
   display: inline-block;
   box-shadow: 0 0.5rem 1rem 0 rgba(44, 51, 73, 0.1);
   max-width: 196px;
-  word-break: break-all;
+  // word-break: break-all;
 }
