--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -852,8 +852,8 @@
             <div class="row">
               <div  class="col-md-12">
                 <ul class="nav nav-pills mb-3">
-                  <li class="active"><a data-toggle="pill" href="#dine-in" class="active">Dine in</a></li>
-                  <li><a data-toggle="pill" href="#to-go">To Go</a></li>
+                  <li class="active"><a data-toggle="pill" href="#dine-in" (click)="changeIsToGo(0)" class="active">Dine in</a></li>
+                  <li><a data-toggle="pill" href="#to-go" (click)="changeIsToGo(1)">To Go</a></li>
                 </ul>
                 <div class="tab-content">
                   <div id="dine-in" class="tab-pane in active">
@@ -861,7 +861,7 @@
                       <div class="col-xs-6 left">
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
-                            <input type="text" placeholder=" "  required>
+                            <input #gn type="text" (keyup)="changeGuestName(gn.value)" placeholder=" "  required>
                             <span>First Name</span>
                           </label>
                         </div>
@@ -869,7 +869,7 @@
                       <div class="col-xs-6 right">
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
-                            <input type="text" placeholder=" "  required>
+                            <input #ge type="text"  (keyup)="changeGuestEmail(ge.value)" placeholder=" "  required>
                             <span>Email Address</span>
                           </label>
                         </div>
@@ -877,7 +877,7 @@
                       <div class="col-xs-12">
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
-                            <input type="text" placeholder=" "  required>
+                            <input id="tb" #tb (keyup)="tableF(tb.value)" type="text" placeholder=" "  required>
                             <span>Table Number</span>
                           </label>
                         </div>
@@ -889,7 +889,7 @@
                       <div class="col-xs-6 left">
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
-                            <input type="text" placeholder=" "  required>
+                            <input #ogn type="text" (keyup)="changeGuestName(ogn.value)"  placeholder=" "  required>
                             <span>First Name</span>
                           </label>
                         </div>
@@ -897,7 +897,7 @@
                       <div class="col-xs-6 right">
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
-                            <input type="text" placeholder=" "  required>
+                            <input #oge type="text" (keyup)="changeGuestEmail(oge.value)" placeholder=" "  required>
                             <span>Email Address</span>
                           </label>
                         </div>
