--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -851,7 +851,7 @@
           <div class="container">
             <div class="row">
               <div  class="col-md-12">
-                <ul class="nav nav-pills mb-3">
+                <!-- <ul class="nav nav-pills mb-3">
                   <li class="active"><a data-toggle="pill" href="#dine-in" class="active">Dine in</a></li>
                   <li><a data-toggle="pill" href="#to-go">To Go</a></li>
                 </ul>
@@ -904,8 +904,8 @@
                       </div>  
                     </div>
                   </div>
-                </div>
-                <!-- <div  class="section-content1 border p-1 rounded ">
+                </div> -->
+                <div  class="section-content1 border p-1 rounded ">
                   <div id="tb" class="d-flex align-items-center">
                     <div  class="d-flex align-items-center col-lg-12 px-0">
                       <span class="mr-02"><nb-icon icon="layers-outline"></nb-icon></span>
@@ -914,7 +914,7 @@
                     <button  *ngIf="!tableNumberSubmitted" (click)="tableF(tb.value)" class="btn btn-success btn-sm">Submit</button>
                     <button *ngIf="tableNumberSubmitted" (click)="changeTable()" class="btn btn-success btn-sm">Change</button>
                   </div>
-                </div> -->
+                </div>
               </div>
             </div>
           </div>
