--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -518,7 +518,7 @@
                     </li>
                     <li>
                       <p *ngIf="country.toUpperCase() == 'AU' || country.toUpperCase() == 'IN'">GST Applied</p>
-                      <p *ngIf="country.toUpperCase() == 'US'">TAX Applied</p>
+                      <p *ngIf="country.toUpperCase() == 'US'">Tax Applied</p>
                       <p>{{currency}} {{(itemList.length?placeOrderBody.data.orderData.TaxAmt:0).toFixed(2)}}</p>
                     </li>
                 
@@ -856,12 +856,12 @@
                   <li><a data-toggle="pill" href="#to-go" (click)="changeIsToGo(1)">To Go</a></li>
                 </ul>
                 <div class="tab-content">
-                  <div id="dine-in" class="tab-pane in active">
+                  <div *ngIf="!isToGo" id="dine-in" class="tab-pane in active">
                     <div class="row">
                       <div class="col-xs-6 left">
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
-                            <input #gn type="text" (keyup)="changeGuestName(gn.value)" placeholder=" "  required>
+                            <input #gn id="gn" type="text" (keyup)="changeGuestName(gn.value)" placeholder=" "  required>
                             <span>First Name</span>
                           </label>
                         </div>
@@ -870,7 +870,7 @@
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
                             <input #ge type="text"  (keyup)="changeGuestEmail(ge.value)" placeholder=" "  required>
-                            <span>Email Address</span>
+                            <span>Enter Email For Receipt</span>
                           </label>
                         </div>
                       </div>  
@@ -884,12 +884,12 @@
                       </div>  
                     </div>
                   </div>
-                  <div id="to-go" class="tab-pane fade">
+                  <div *ngIf="isToGo" id="to-go" class="tab-pane fade">
                     <div class="row">
                       <div class="col-xs-6 left">
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
-                            <input #ogn type="text" (keyup)="changeGuestName(ogn.value)"  placeholder=" "  required>
+                            <input #ogn id="ogn" type="text" (keyup)="changeGuestName(ogn.value)"  placeholder=" "  required>
                             <span>First Name</span>
                           </label>
                         </div>
@@ -898,7 +898,7 @@
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
                             <input #oge type="text" (keyup)="changeGuestEmail(oge.value)" placeholder=" "  required>
-                            <span>Email Address</span>
+                            <span>Enter Email For Receipt</span>
                           </label>
                         </div>
                       </div>  
@@ -1020,7 +1020,7 @@
                   </li>
                   <li>
                     <p *ngIf="checkCountry">GST Applied</p>
-                    <p *ngIf="!checkCountry">TAX Applied</p>
+                    <p *ngIf="!checkCountry">Tax Applied</p>
                     <p>{{currency}} {{(placeOrderBody.data.orderData.TaxAmt).toFixed(2)}}</p>
                   </li>
             
