--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -870,7 +870,7 @@
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
                             <input #ge type="text"  (keyup)="changeGuestEmail(ge.value)" placeholder=" "  required>
-                            <span>Enter Email For Receipt</span>
+                            <span>Email For Receipt</span>
                           </label>
                         </div>
                       </div>  
@@ -898,7 +898,7 @@
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
                             <input #oge type="text" (keyup)="changeGuestEmail(oge.value)" placeholder=" "  required>
-                            <span>Enter Email For Receipt</span>
+                            <span>Email For Receipt</span>
                           </label>
                         </div>
                       </div>  
