--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -877,7 +877,7 @@
                       <div class="col-xs-12">
                         <div class="form-group mb-0">
                           <label class="pure-material-textfield-outlined w-100">
-                            <input id="tb" #tb (keyup)="tableF(tb.value)" type="text" placeholder=" "  required>
+                            <input id="tb" #tb (keyup)="tableF(tb.value, $event)" type="text" placeholder=" "  required>
                             <span>Table Number</span>
                           </label>
                         </div>
