--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,7 +171,7 @@ button {
 /****** Header Styling ******/
 header {
   .left {
-    .show-xs {
+    .navbar-brand  {
       display: none;
     }
   }
